Update notebook with new scenario data (1+2)

--- a/nbs/scenarios.ipynb
+++ b/nbs/scenarios.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,88 +49,26 @@
     "    \"../data/clusters/copd_clustered.csv\", parse_dates=[\"admission_date\", \"discharge_date\"]\n",
     ").dropna(subset=[\"cluster\"])\n",
     "\n",
-    "copd[\"cluster\"] = copd[\"cluster\"].astype(int)"
+    "copd[\"cluster\"] = copd[\"cluster\"].astype(int)\n",
+    "n_clusters = copd[\"cluster\"].nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_times(diff):\n",
-    "\n",
-    "    times = diff.dt.total_seconds().div(24 * 60 * 60, fill_value=0)\n",
-    "    return times\n",
-    "\n",
-    "    \n",
-    "def get_queue_params(data, prop=1, lambda_coeff=1, dist=stats.expon):\n",
-    "    \"\"\" Get the arrival and service parameters from `data` and the given `prop`. \"\"\"\n",
-    "\n",
-    "    inter_arrivals = (\n",
-    "        data.set_index(\"admission_date\").sort_index().index.to_series().diff()\n",
-    "    )\n",
-    "    interarrival_times = get_times(inter_arrivals)\n",
-    "    lambda_ = lambda_coeff / np.mean(interarrival_times)\n",
-    "\n",
-    "    mean_system_time = np.mean(data[\"true_los\"])\n",
-    "    mu_estimate = mean_system_time * prop\n",
-    "\n",
-    "    queue_params = {\"arrival\": lambda_, \"service\": 1 / mu_estimate}\n",
-    "\n",
-    "    return queue_params\n",
-    "\n",
-    "\n",
-    "@dask.delayed\n",
-    "def simulate_queue(data, column, props, num_servers, seed, max_time, lambda_coeff=1):\n",
-    "\n",
-    "    ciw.seed(seed)\n",
-    "    all_queue_params = {}\n",
-    "    for (label, subdata), service_prop in zip(\n",
-    "        data.groupby(column), props\n",
-    "    ):\n",
-    "        all_queue_params[label] = get_queue_params(subdata, service_prop, lambda_coeff)\n",
-    "\n",
-    "    N = ciw.create_network(\n",
-    "        arrival_distributions={\n",
-    "            f\"Class {label}\": [Exponential(params[\"arrival\"])]\n",
-    "            for label, params in all_queue_params.items()\n",
-    "        },\n",
-    "        service_distributions={\n",
-    "            f\"Class {label}\": [Exponential(params[\"service\"])]\n",
-    "            for label, params in all_queue_params.items()\n",
-    "        },\n",
-    "        number_of_servers=[num_servers],\n",
-    "    )\n",
-    "\n",
-    "    Q = ciw.Simulation(N)\n",
-    "    Q.simulate_until_max_time(max_time)\n",
-    "\n",
-    "    return Q\n",
-    "\n",
-    "\n",
-    "def get_mean_server_utilisation(Q):\n",
-    "\n",
-    "    return Q.transitive_nodes[0].server_utilisation\n",
-    "\n",
-    "\n",
-    "def get_simulation_results(Q, max_time):\n",
-    "\n",
-    "    records = Q.get_all_records()\n",
-    "    results = pd.DataFrame(\n",
-    "        [r for r in records if max_time * 0.25 < r.arrival_date < max_time * 0.75]\n",
-    "    )\n",
-    "\n",
-    "    results[\"utilisation\"] = Q.transitive_nodes[0].server_utilisation\n",
-    "    results[\"system_time\"] = results[\"exit_date\"] - results[\"arrival_date\"]\n",
-    "    return results[[\"utilisation\", \"system_time\", \"waiting_time\", \"queue_size_at_arrival\", \"customer_class\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0.95, 1.0, 1.0, 0.5], 40)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "with open(\"../data/wasserstein/best/params.txt\", \"r\") as f:\n",
     "    strings = f.read().split(\" \")\n",
@@ -154,9 +92,7 @@
    "source": [
     "lambda_results = pd.concat(\n",
     "    (pd.read_csv(filename) for filename in glob.iglob(\"../data/lambda_scaling/*.csv\"))\n",
-    ")\n",
-    "\n",
-    "lambda_results[\"relative_num_servers\"] = lambda_results[\"num_servers\"] / num_servers"
+    ")"
    ]
   },
   {
@@ -165,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lambda_originals = lambda_results[lambda_results[\"relative_num_servers\"] == 1]\n",
+    "lambda_originals = lambda_results[lambda_results[\"lambda_coeff\"].round(2) == 1]\n",
     "lambda_mean_utilisation = lambda_originals[\"utilisation\"].mean()\n",
     "lambda_mean_system_time = lambda_originals[\"system_time\"].mean()\n",
     "\n",
@@ -364,8 +300,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_clusters = copd[\"cluster\"].nunique()\n",
-    "\n",
     "moving_results = pd.concat(\n",
     "    [pd.read_csv(filename) for filename in glob.iglob(\"../data/moving_clusters/*.csv\")]\n",
     ")"
@@ -379,6 +313,7 @@
    "source": [
     "def get_plotting_data(data, column):\n",
     "\n",
+    "    data = data.copy()\n",
     "    original_mean = data[data[\"prop_to_move\"] == 0][column].mean()\n",
     "    data[f\"relative_{column}\"] = data[column] / original_mean\n",
     "\n",
@@ -391,7 +326,7 @@
     "    return lower, mean, upper\n",
     "\n",
     "\n",
-    "def make_split_plot(column, ylabel_text, path=None):\n",
+    "def make_split_plot(column, ylabel_text, path=None, yscale=\"linear\"):\n",
     "\n",
     "    fig, axes = plt.subplots(\n",
     "        nrows=n_clusters,\n",
@@ -418,6 +353,7 @@
     "    for origin, destination in it.product(range(n_clusters), repeat=2):\n",
     "\n",
     "        ax = axes[origin, destination]\n",
+    "        ax.set_yscale(yscale)\n",
     "\n",
     "        if origin != destination:\n",
     "            data = moving_results[\n",
@@ -462,101 +398,10 @@
    "source": [
     "make_split_plot(\n",
     "    column=\"system_time\",\n",
-    "    ylabel_text=\"Relative system time\",\n",
+    "    ylabel_text=\"Relative system time (logscale)\",\n",
     "    path=\"../img/moving_time.pdf\",\n",
+    "    yscale=\"log\",\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fig, axes = plt.subplots(nrows=n_clusters, ncols=n_clusters, sharex=True, sharey=True, figsize=(7, 7), dpi=300)\n",
-    "\n",
-    "# left, width = .25, .5\n",
-    "# bottom, height = .25, .5\n",
-    "# right = left + width\n",
-    "# top = bottom + height\n",
-    "\n",
-    "# ylabel = fig.text(\n",
-    "#     0, 0.5*(bottom+top), \"Relative server utilisation\", ha=\"right\", va=\"center\", rotation=\"vertical\"\n",
-    "# )\n",
-    "\n",
-    "# xlabel = fig.text(\n",
-    "#     0.525*(left+right), -0.01, \"Transfer proportion\", ha=\"center\", va=\"bottom\", rotation=\"horizontal\"\n",
-    "# )\n",
-    "\n",
-    "# for origin, destination in it.product(range(n_clusters), repeat=2):\n",
-    "\n",
-    "#     ax = axes[origin, destination]\n",
-    "\n",
-    "#     if origin != destination:\n",
-    "#         data = moving_results[\n",
-    "#             (moving_results[\"origin\"] == origin)\n",
-    "#             & (moving_results[\"destination\"] == destination)\n",
-    "#         ]\n",
-    "\n",
-    "#         lower, mean, upper = get_plotting_data(data, \"utilisation\")\n",
-    "\n",
-    "#         ax.plot(mean)\n",
-    "#         ax.fill_between(lower.index, lower, upper, alpha=0.25)\n",
-    "#         ax.set_title(f\"{origin} to {destination}\")\n",
-    "\n",
-    "# plt.tight_layout()\n",
-    "# plt.savefig(\n",
-    "#     \"../img/moving_utilisation.pdf\",\n",
-    "#     bbox_extra_artists=(xlabel, ylabel),\n",
-    "#     bbox_inches=\"tight\",\n",
-    "#     transparent=True,\n",
-    "# )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fig, axes = plt.subplots(nrows=n_clusters, ncols=n_clusters, sharex=True, sharey=True, figsize=(7, 7), dpi=300)\n",
-    "\n",
-    "# left, width = .25, .5\n",
-    "# bottom, height = .25, .5\n",
-    "# right = left + width\n",
-    "# top = bottom + height\n",
-    "\n",
-    "# ylabel = fig.text(\n",
-    "#     0, 0.5*(bottom+top), \"Relative system time\", ha=\"right\", va=\"center\", rotation=\"vertical\"\n",
-    "# )\n",
-    "\n",
-    "# xlabel = fig.text(\n",
-    "#     0.525*(left+right), -0.01, \"Transfer proportion\", ha=\"center\", va=\"bottom\", rotation=\"horizontal\"\n",
-    "# )\n",
-    "\n",
-    "# for origin, destination in it.product(range(n_clusters), repeat=2):\n",
-    "\n",
-    "#     ax = axes[origin, destination]\n",
-    "\n",
-    "#     if origin != destination:\n",
-    "#         data = all_moving_results[\n",
-    "#             (all_moving_results[\"origin\"] == origin)\n",
-    "#             & (all_moving_results[\"destination\"] == destination)\n",
-    "#         ]\n",
-    "\n",
-    "#         lower, mean, upper = get_plotting_data(data, \"utilisation\")\n",
-    "\n",
-    "#         ax.plot(mean)\n",
-    "#         ax.fill_between(lower.index, lower, upper, alpha=0.25)\n",
-    "#         ax.set_title(f\"{origin} to {destination}\")\n",
-    "\n",
-    "# plt.tight_layout()\n",
-    "# plt.savefig(\n",
-    "#     \"../img/moving_time.pdf\",\n",
-    "#     bbox_extra_artists=(xlabel, ylabel),\n",
-    "#     bbox_inches=\"tight\",\n",
-    "#     transparent=True,\n",
-    "# )"
    ]
   },
   {
@@ -569,37 +414,49 @@
    "source": [
     "fig, axes = plt.subplots(nrows=n_clusters, ncols=n_clusters, sharex=True, sharey=True, figsize=(7, 7), dpi=300)\n",
     "\n",
+    "left, width = .25, .5\n",
+    "bottom, height = .25, .5\n",
+    "right = left + width\n",
+    "top = bottom + height\n",
+    "\n",
     "ylabel = fig.text(\n",
     "    0, 0.5*(bottom+top), \"Relative system time\", ha=\"right\", va=\"center\", rotation=\"vertical\"\n",
     ")\n",
     "\n",
     "xlabel = fig.text(\n",
-    "    0.525*(left+right), -0.01, \"Transfer proportion\", ha=\"center\", va=\"bottom\", rotation=\"horizontal\"\n",
+    "    0.5*(left+right), -0.01, \"Transfer proportion\", ha=\"center\", va=\"bottom\", rotation=\"horizontal\"\n",
     ")\n",
     "\n",
     "for origin, destination in it.product(range(n_clusters), repeat=2):\n",
     "\n",
     "    ax = axes[origin, destination]\n",
-    "#     ax.set_yscale(\"log\")\n",
+    "    ax.set_yscale(\"log\")\n",
     "\n",
     "    if origin != destination:\n",
-    "        data = all_moving_results[\n",
-    "            (all_moving_results[\"origin\"] == origin)\n",
-    "            & (all_moving_results[\"destination\"] == destination)\n",
+    "        data = moving_results[\n",
+    "            (moving_results[\"origin\"] == origin)\n",
+    "            & (moving_results[\"destination\"] == destination)\n",
     "        ]\n",
     "\n",
     "        lines, labels = [], []\n",
     "        for label, subdata in data.groupby(\"customer_class\"):\n",
-    "            subdata = subdata.groupby(\"prop_to_move\")[\"system_time\"].mean() / original_mean_time\n",
-    "            \n",
-    "            line = ax.plot(subdata)\n",
+    "\n",
+    "            _, mean, _ = get_plotting_data(subdata, \"system_time\")\n",
+    "\n",
+    "            line = ax.plot(mean)\n",
     "            lines.append(line[0])\n",
     "            labels.append(label)\n",
     "\n",
     "        ax.set_title(f\"{origin} to {destination}\")\n",
     "\n",
-    "legend = plt.figlegend(\n",
-    "    lines, labels, ncol=n_clusters, bbox_to_anchor=(0.75, 1.08), prop={'size': 12}\n",
+    "legend = ax.legend(\n",
+    "    lines,\n",
+    "    labels,\n",
+    "    ncol=n_clusters,\n",
+    "    loc=\"upper center\",\n",
+    "    bbox_to_anchor=(0.5, 1.08),\n",
+    "    prop={'size': 12},\n",
+    "    title=\"Cluster\",\n",
     ")\n",
     "\n",
     "plt.tight_layout()\n",
