--- a/nbs/clusters.ipynb
+++ b/nbs/clusters.ipynb
@@ -1096,7 +1096,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "COPD paper",
+   "display_name": "copd-paper",
    "language": "python",
    "name": "copd-paper"
   },
@@ -1110,7 +1110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
