--- a/main.tex
+++ b/main.tex
@@ -1,28 +1,38 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 
 % Setting up the page
-\usepackage[margin=1in, includefoot, footskip=30pt]{geometry}
+\usepackage[margin=20mm,includefoot,footskip=10mm]{geometry}
 \usepackage{setspace}
-    \doublespacing%
+    \onehalfspacing%
 
-% Bibliography and referencing
+% Bibliography, referencing
 \usepackage[numbers]{natbib}
-    \bibliographystyle{abbrvnat}
+    \bibliographystyle{abbrvurl}
 \usepackage{hyperref}
+
+% Mathematics, symbols
+\usepackage{amssymb}
+\usepackage{amsmath}
+    \DeclareMathOperator*{\argmin}{arg\,min}
+\usepackage{pgf, interval}
+    \intervalconfig{soft open fences}
 
 % Images, tables
 \usepackage{graphicx}
     \graphicspath{{img/}}
 \usepackage{booktabs}
+    \renewcommand{\arraystretch}{1.3}
 \usepackage{caption}
 \usepackage{subcaption}
+
+% Mathematics
+\usepackage{amssymb}
 
 % Custom lengths
 \newlength{\imgwidth}
 \setlength{\imgwidth}{.9\textwidth}
-\newlength{\halfimgwidth}
-\setlength{\halfimgwidth}{.5\imgwidth}
-
+\newlength{\tabwidth}
+\setlength{\tabwidth}{.9\textwidth}
 
 \title{%
     Understanding COPD patients in the hospital system via administrative data
@@ -32,11 +42,11 @@
 
 
 \begin{document}
-\maketitle
+\maketitle%
 
 \input{sections/abstract}
 \input{sections/intro}
-\input{sections/wasserstein}
+\input{sections/model}
 \input{sections/scenarios}
 \input{sections/conclusion}
 
