--- a/sections/scenarios.tex
+++ b/sections/scenarios.tex
@@ -5,9 +5,10 @@ Section~\ref{sec:wasserstein}, an investigation into the parameters of the model
 can be conducted. This section is comprised of several `what-if' scenarios --- a
 classic component of healthcare operational research --- under this novel
 parameterisation. The outcomes of interest in this work are server (resource)
-utilisation and system times as these capture the both the driving forces of
-cost and the overall state of the system. Specifically, the objective of these
-experiments is to address the following questions:
+utilisation and system times as these capture the driving forces of cost and
+flow as well as the overall state of the system, its staff and its patients.
+Specifically, the objective of these experiments is to address the following
+questions:
 \begin{itemize}
     \item How would the system be affected by a change in overall patient
         arrivals?
@@ -19,7 +20,9 @@ experiments is to address the following questions:
 Owing to the nature of the observed data, the queuing model parameterisation
 and its assumptions, the effects of each scenario are given in relative terms
 with respect to the base case. The base case being those results generated from
-the best parameter set found in Section~\ref{sec:model}.
+the best parameter set recorded in Table~\ref{tab:comparison}. In particular,
+each piece of data in each scenario is simply scaled by the corresponding median
+value in the base case.
 
 As mentioned in Section~\ref{sec:intro}, the source code used throughout this
 work is available online and has been archived. %TODO Add citation for repo
@@ -53,12 +56,25 @@ multiplying each cluster's arrival rate by \(\sigma\). That is, for cluster
     \end{subfigure}
     \caption{%
         Plots of \(\sigma\) against relative (\subref{fig:lambda_time}) system
-        time and (\subref{fig:lambda_utilisation}) mean server utilisation.
+        time and (\subref{fig:lambda_utilisation}) server utilisation.
     }\label{fig:lambda}
 \end{figure}
 
 
 \subsection{Changes to resource availability}\label{subsec:resources}
+
+As is discussed in Section~\ref{sec:model}, the resource availability of the
+system is captured by the number of parallel servers in the system, \(c\).
+Therefore, to modify the overall resource availability, only the number of
+servers need be changed. This kind of sensitivity analysis is usually done to
+determine the opportunity cost of adding service capacity to a system, e.g.\
+would adding \(n\) servers sufficiently increase efficiency without exceeding
+a budget?
+
+To reiterate the beginning of this section, all suitable parameters are given in
+relative terms. This includes the number of servers here. By doing this, the
+changes in resource availability are more easily seen, and overrule any concerns
+as to what a particular number of servers exactly reflects in the real world.
 
 \begin{figure}
     \centering
@@ -73,7 +89,7 @@ multiplying each cluster's arrival rate by \(\sigma\). That is, for cluster
     \caption{%
         Plots of the relative number of servers against relative
         (\subref{fig:servers_time}) system time and
-        (\subref{fig:servers_utilisation}) mean server utilisation.
+        (\subref{fig:servers_utilisation}) server utilisation.
     }
 \end{figure}
 
@@ -93,7 +109,7 @@ multiplying each cluster's arrival rate by \(\sigma\). That is, for cluster
     \centering
     \includegraphics[width=\imgwidth]{moving_utilisation}
     \caption{%
-        Plots of proportions of each cluster moving to another on relative mean
+        Plots of proportions of each cluster moving to another on relative
         server utilisation.
     }\label{fig:moving_utilisation}
 \end{figure}
