--- a/tex/summary.tex
+++ b/tex/summary.tex
@@ -6,10 +6,11 @@
 \textbf{Characteristics} & \textbf{Percentage of spells} &     9.91 &    19.27 &    69.39 &      1.44 &     100.00 \\
                & \textbf{Mean spell cost, £} &  8051.23 &  2309.63 &  1508.41 &  17888.43 &    2265.40 \\
                & \textbf{Percentage of recorded costs} &    29.01 &    19.38 &    48.20 &      3.40 &     100.00 \\
-               & \textbf{Mean COPD adm. in last year} &     2.19 &     1.96 &     1.88 &      2.09 &       1.93 \\
+               & \textbf{Median age} &    77.00 &    77.00 &    71.00 &     82.00 &      73.00 \\
                & \textbf{Minimum LOS} &    12.82 &    -0.00 &    -0.02 &     48.82 &      -0.02 \\
                & \textbf{Mean LOS} &    25.30 &     6.46 &     4.11 &     75.36 &       7.68 \\
                & \textbf{Maximum LOS} &    51.36 &    30.86 &    16.94 &    224.93 &     224.93 \\
+               & \textbf{Median COPD adm. in last year} &     2.00 &     1.00 &     1.00 &      2.00 &       1.00 \\
                & \textbf{Median no. of LTCs} &     2.00 &     3.00 &     1.00 &      3.00 &       1.00 \\
                & \textbf{Median no. of ICDs} &     9.00 &     8.00 &     5.00 &     11.00 &       6.00 \\
                & \textbf{Median CCI} &     9.00 &    20.00 &     4.00 &     18.00 &       4.00 \\
