Add domain for number of servers to definition.

--- a/sections/model.tex
+++ b/sections/model.tex
@@ -21,9 +21,9 @@ assumptions are made:
         distributed with some mean. This is in spite of the system time
         distributions shown in Figure~\ref{fig:cluster_los} in order to
         simplify the model parameterisation.
-    \item There are \(c\) servers available to arriving patients at the node
-        representing the overall resource availability including bed capacity
-        and hospital staff.
+    \item There are \(c \in \mathbb{N}\) servers available to arriving patients
+        at the node representing the overall resource availability including bed
+        capacity and hospital staff.
     \item There is no queue or system capacity. In~\cite{Williams2015}, a
         queue capacity of zero is set under the assumption that any surplus
         arrivals would be sent to another suitable ward or unit. As this
