Update scenario images.

--- a/nbs/scenarios.ipynb
+++ b/nbs/scenarios.ipynb
@@ -397,7 +397,7 @@
     "moving_uniques = moving_utilisations[\"prop_to_move\"].unique()\n",
     "\n",
     "moving_min = f\"{min(moving_uniques):.1f}%\"\n",
-    "moving_max = f\"{max(moving_uniques):.1f}%\"\n",
+    "moving_max = f\"{max(moving_uniques) + moving_uniques[1] - moving_uniques[0]:.1f}%\"\n",
     "moving_step = f\"{(moving_uniques[1] - moving_uniques[0]):.1e}\"\n",
     "\n",
     "with open(\"../tex/moving_clusters_min.tex\", \"w\") as f:\n",
