Add transition from model to scenario section.

--- a/sections/model.tex
+++ b/sections/model.tex
@@ -144,3 +144,9 @@ numerically, showing a clear fit by the best parameters across the board.
         data based on the model parameters and summary statistics for length of
     stay (LOS).}\label{tab:comparison}
 \end{table}
+
+In this section, the clustering has been used to enrich the overall queuing
+model and to recover the parameters for several classes within that queue to a
+high standard. Now, using this model, the next section conducts an investigation
+into the underlying system by adjusting the parameters of the queue with the
+clustering.
