--- a/sections/scenarios.tex
+++ b/sections/scenarios.tex
@@ -1,14 +1,12 @@
 \section{Adjusting the queuing model}\label{sec:scenarios}
 
-With the queuing model established and validated in Section~\ref{sec:model}, an
-investigation into the capabilities of the system can be conducted by tweaking
-the parameters of the model. This section is comprised of several `what-if'
-scenarios --- a classic component of healthcare operational research --- under
-this novel parameterisation. The outcomes of interest in this work are server
-(resource) utilisation and system times as these capture the driving forces of
-cost and flow as well as the overall state of the system, its staff and its
-patients.  Specifically, the objective of these experiments is to address the
-following questions:
+This section is comprised of several `what-if' scenarios --- a classic component
+of healthcare operational research --- under the novel parameterisation of the
+queue established in Section~\ref{sec:model}. The outcomes of interest in this
+work are server (resource) utilisation and system times as these metrics capture
+the driving forces of cost and flow as well as the overall state of the system,
+its staff and its patients. Specifically, the objective of these experiments is
+to address the following questions:
 \begin{itemize}
     \item How would the system be affected by a change in overall patient
         arrivals?
