--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -5,7 +5,7 @@ that encompasses the topics of segmentation analysis, queuing models, and the
 recovery of queuing parameters from incomplete data. This is done despite common
 limitations in operational research with regard to the availability of
 fine-grained data, and this work only uses administrative hospital spell data
-from patients presenting COPD.\
+from patients presenting COPD in the South Wales area.\
 
 By considering a variety of attributes present in the data, and engineering
 some, an effective clustering of the spell population is identified that
@@ -27,4 +27,5 @@ cluster, and a common number of servers to emulate resource availability. The
 parameterisation itself offers its strengths by being simple and effective.
 Despite its simplicity, a good fit to the observed data is found, and --- as is
 evident from the closing section of this work --- substantial and useful
-insights can be gained into the needs of COPD patient population being studied.
+insights can be gained into the needs of the COPD patient population being
+studied.
