Add citation for results data.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -96,7 +96,6 @@
 @article{Djabali2018,
     author = {Djabali, Yasmina and Rabta, Boualem and Aissani, Djamil},
     year = {2018},
-    month = {06},
     pages = {507-531},
     title = {Approximating Service-time Distributions by Phase-type
              Distributions in Single-server Queues: A Strong Stability
@@ -392,7 +391,6 @@
     author = {Satopaa, Ville and Albrecht, Jeannie and Irwin, David and
               Raghavan, Barath},
     year = {2011},
-    month = {07},
     pages = {166--171},
     title = {Finding a `Kneedle' in a Haystack: Detecting Knee Points in System
              Behavior},
@@ -497,7 +495,21 @@
     primaryClass = {cs.LG},
 }
 
-@misc{Wilde2020dataset,
+@misc{Wilde2020results,
+  author       = {Wilde, Henry and
+                  Knight, Vincent and
+                  Gillard, Jonathan},
+  title        = {{Experiment data in support of `Recovering hospital 
+                   service times via the Wasserstein distance for
+                   segmentation analysis: a study in COPD patients in
+                   the Cwm Taf region'}},
+  year         = 2020,
+  publisher    = {Zenodo},
+  version      = {0.0.1},
+  doi          = {10.5281/zenodo.3924716},
+}
+
+@misc{Wilde2020synthetic,
   author       = {Wilde, Henry and
                   Knight, Vincent and
                   Gillard, Jonathan},
