--- a/sections/scenarios.tex
+++ b/sections/scenarios.tex
@@ -26,7 +26,8 @@ a value of 1 is `normal'.
 As mentioned in Section~\ref{sec:intro}, the source code used throughout this
 work is available online and has been archived. %TODO Add citation for repo
 In addition to this, the datasets generated from the simulations in this section
-have been archived. %TODO archive and add citation
+have been archived along with those generated from the parameter
+sweep~\cite{Wilde2020results}.
 
 
 \subsection{Changes to overall patient arrivals}\label{subsec:arrivals}
