--- a/sections/model.tex
+++ b/sections/model.tex
@@ -21,9 +21,9 @@ assumptions are made:
         distributed with some mean. This is in spite of the system time
         distributions shown in Figure~\ref{fig:cluster_los} in order to
         simplify the model parameterisation.
-    \item There are \(c\) servers available to arriving patients at the node
-        representing the overall resource availability including bed capacity
-        and hospital staff.
+    \item There are \(c \in \mathbb{N}\) servers available to arriving patients
+        at the node representing the overall resource availability including bed
+        capacity and hospital staff.
     \item There is no queue or system capacity. In~\cite{Williams2015}, a
         queue capacity of zero is set under the assumption that any surplus
         arrivals would be sent to another suitable ward or unit. As this
@@ -103,7 +103,7 @@ cluster \(i\) obtained from a simulation with \(c\) servers and
 \end{equation}
 
 The parameter sweep included values of each \(p_i\) from \(0.5\)
-to \(1\) with a granularity of \(5 \times 10^{-2}\) and values of \(c\) from
+to \(1.0\) with a granularity of \(5.0 \times 10^{-2}\) and values of \(c\) from
 \(40\) to \(60\) at steps of \(5\).  These choices were informed by the
 assumptions of the model and formative analysis to reduce the parameter space
 given the computational resources required to conduct the simulations. Each
@@ -144,3 +144,9 @@ numerically, showing a clear fit by the best parameters across the board.
         data based on the model parameters and summary statistics for length of
     stay (LOS).}\label{tab:comparison}
 \end{table}
+
+In this section, the clustering has been used to enrich the overall queuing
+model and to recover the parameters for several classes within that queue to a
+high standard. Now, using this model, the next section conducts an investigation
+into the underlying system by adjusting the parameters of the queue with the
+clustering.
