Try on a new, longer title.

--- a/main.tex
+++ b/main.tex
@@ -19,8 +19,9 @@
 \newcommand{\tablewidth}{.9\textwidth}
 
 \title{%
-    Reverse-engineering hospital service times via the Wasserstein distance for
-    patient cluster analysis: a case study in COPD
+    Segmentation analysis and recovering queuing parameters via the
+    Wasserstein distance: a study of administrative data for COPD patients from
+    the Cwm Taf region
 }
 \author{}
 \date{}
