Change grammar in title slightly.

--- a/main.tex
+++ b/main.tex
@@ -35,7 +35,7 @@
 \setlength{\tabwidth}{.9\textwidth}
 
 \title{%
-    Segmentation analysis and recovering queuing parameters via the
+    Segmentation analysis and the recovery of queuing parameters via the
     Wasserstein distance: a study of administrative data for COPD patients from
     the Cwm Taf region
 }
